added new tests