@@ -1,29 +1,41 @@
 package ru.aal;
 
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.Mockito;
 import org.mockito.Spy;
+import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.*;
 
+@ExtendWith(MockitoExtension.class)
 class Game2048Test {
 
+    @Spy
+    private GameHelper helper;
+
     @Mock
-    Board<Key, Integer> board = mock(SquareBoard.class);
+    private Board<Key, Integer> board;
 
     @InjectMocks
-    Game game = new Game2048();
+    private Game2048 game;
 
     @Test
     void testCanMove() {
-        when(board.availableSpace()).thenReturn(Arrays.asList(new Key(1, 1)));
+        when(board.availableSpace()).thenReturn(List.of(new Key(1,1)));
+        game.init();
         assertTrue(game.canMove());
+    }
+
+    @Test
+    void testInit() {
+        doNothing().when(board).fillBoard(anyList());
+        when(board.availableSpace()).thenReturn(List.of(new Key(1,1)));
+        game.init();
+        verify(board).fillBoard(anyList());
     }
 }
